syntax = "proto3";

package book;

import "google/protobuf/timestamp.proto";

option go_package = "https://github.com/IPKIN9/book-svc/pkg/protos";

service BookService {
    rpc GetBook(GetBookRequest) returns (GetBookResponse);
    rpc GetAllBooks(Empty) returns (GetAllBooksResponse);
    rpc CreateBook(CreateBookRequest) returns (BookResponse);
    rpc UpdateBook(UpdateBookRequest) returns (BookResponse);
    rpc DeleteBook(DeleteBookRequest) returns (Empty);
}

message GetBookRequest {
    int64 book_id = 1;
}

message GetBookResponse {
    Book book = 1;
}

message CreateBookRequest {
    string title = 1;
    string isbn = 2;
    int64 author_id = 3;
    int64 category_id = 4;
    google.protobuf.Timestamp published_date = 5;
    string description = 6;
}

message UpdateBookRequest {
    int64 book_id = 1;
    BookUpdate book = 2;
}

message DeleteBookRequest {
    int64 book_id = 1;
}

message BookResponse {
    Book book = 1;
}

message GetAllBooksResponse {
    repeated Book books = 1;
}

message BookUpdate {
    string title = 1;
    string isbn = 2;
    int64 author_id = 3;
    int64 category_id = 4;
    google.protobuf.Timestamp published_date = 6;
    string description = 5;
}

message Book {
    int64 book_id = 1;
    string title = 2;
    string isbn = 3;
    int64 author_id = 4;
    int64 category_id = 5;
    google.protobuf.Timestamp published_date = 6;
    string description = 7;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

message Empty {}
