syntax = "proto3";

package book;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "https://github.com/IPKIN9/book-svc/pkg/protos";

service BookService {
    rpc GetBook(GetBookRequest) returns (BookDetail);
    rpc GetAllBooks(GetAllBookRequest) returns (GetAllBooksResponse);
    rpc CreateBook(CreateBookRequest) returns (BookResponse);
    rpc UpdateBook(UpdateBookRequest) returns (BookResponse);
    rpc DeleteBook(DeleteBookRequest) returns (Empty);
    rpc BorrowingBook(BorrowingBookRequest) returns (BorrowingBookResponse);

    rpc GetStock(GetStockRequest) returns (GetStockResponse);
    rpc ChangeStock(ChangeStockRequest) returns (ChangeStockResponse);
}

message GetBookRequest {
    int64 book_id = 1;
}

message CreateBookRequest {
    string title = 1;
    string isbn = 2;
    int64 author_id = 3;
    int64 category_id = 4;
    google.protobuf.Timestamp published_date = 5;
    string description = 6;
}

message UpdateBookRequest {
    int64 book_id = 1;
    BookUpdate book = 2;
}

message DeleteBookRequest {
    int64 book_id = 1;
}

message BookResponse {
    Book book = 1;
}

message GetAllBookRequest {
    google.protobuf.StringValue search = 1;
    int32 limit = 2;
    int32 page = 3;
}

message GetAllBooksResponse {
    repeated Book books = 1;
}

message BookUpdate {
    string title = 1;
    string isbn = 2;
    int64 author_id = 3;
    int64 category_id = 4;
    google.protobuf.Timestamp published_date = 6;
    string description = 5;
}

message BorrowingBookRequest {
    repeated uint64 book_id = 1;
    google.protobuf.Int64Value user_id = 2;
    bool is_borrow = 3;
}

message BorrowingBookResponse {
    uint32 total = 1;
    string message = 2;
}

message GetStockRequest {
    google.protobuf.Int64Value stock_id = 1;
    google.protobuf.Int64Value book_id = 2;
}

message GetStockResponse {
    int64 total_stock = 1;
    int64 avaible_stock = 2;
}

message ChangeStockRequest {
    int64 book_id = 1;
    int64 total_qty = 2;
    int64 avaible_qty = 3;
}

message ChangeStockResponse {
    uint64 current_stock = 1;
    uint64 avaible_stock = 2;
}

message BookDetail {
    int64 book_id = 1;
    string title = 2;
    string isbn = 3;
    int64 author_id = 4;
    string author_name = 5;
    int64 category_id = 6;
    google.protobuf.Timestamp published_date = 7;
    string description = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

message Book {
    int64 book_id = 1;
    string title = 2;
    string isbn = 3;
    int64 author_id = 4;
    int64 category_id = 5;
    google.protobuf.Timestamp published_date = 6;
    string description = 7;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

message Stock {
    int64 stock_id = 1;
    int64 book_id = 2;
    int64 total_quantity = 3;
    int64 avaible_quantity = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message Empty {}
